@@ -16,92 +16,129 @@ public class ServiceMetadataTest {
   @Test
   public void testServiceMetadata() {
     final String name = "testService";
+    final String owner = "serviceOwner";
+    final long throughputBytes = 1000;
     final ServicePartitionMetadata partition =
         new ServicePartitionMetadata(
-            "partition",
-            1000,
             Instant.now().toEpochMilli(),
-            Instant.now().plusSeconds(90).toEpochMilli());
-    final List<ServicePartitionMetadata> partitionList = Collections.singletonList(partition);
-    ServiceMetadata serviceMetadata = new ServiceMetadata(name, partitionList);
+            Instant.now().plusSeconds(90).toEpochMilli(),
+            List.of("partition"));
+    final List<ServicePartitionMetadata> partitionConfigs = Collections.singletonList(partition);
+    ServiceMetadata serviceMetadata =
+        new ServiceMetadata(name, owner, throughputBytes, partitionConfigs);
 
     assertThat(serviceMetadata.name).isEqualTo(name);
-    assertThat(serviceMetadata.partitionList).isEqualTo(partitionList);
+    assertThat(serviceMetadata.owner).isEqualTo(owner);
+    assertThat(serviceMetadata.throughputBytes).isEqualTo(throughputBytes);
+    assertThat(serviceMetadata.partitionConfigs).isEqualTo(partitionConfigs);
   }
 
   @Test
   public void testServiceMetadataImmutableList() {
     final String name = "testService";
-    final ServicePartitionMetadata partition1 =
+    final String owner = "serviceOwner";
+    final long throughputBytes = 1000;
+    final ServicePartitionMetadata partition =
         new ServicePartitionMetadata(
-            "partition",
-            1000,
             Instant.now().toEpochMilli(),
-            Instant.now().plusSeconds(90).toEpochMilli());
-    final List<ServicePartitionMetadata> partitionList = Collections.singletonList(partition1);
-    ServiceMetadata serviceMetadata = new ServiceMetadata(name, partitionList);
+            Instant.now().plusSeconds(90).toEpochMilli(),
+            List.of("partition"));
+    final List<ServicePartitionMetadata> partitionConfigs1 = Collections.singletonList(partition);
+    ServiceMetadata serviceMetadata =
+        new ServiceMetadata(name, owner, throughputBytes, partitionConfigs1);
 
     assertThat(serviceMetadata.name).isEqualTo(name);
-    assertThat(serviceMetadata.partitionList).isEqualTo(partitionList);
+    assertThat(serviceMetadata.owner).isEqualTo(owner);
+    assertThat(serviceMetadata.throughputBytes).isEqualTo(throughputBytes);
+    assertThat(serviceMetadata.partitionConfigs).isEqualTo(partitionConfigs1);
 
     final ServicePartitionMetadata partition2 =
         new ServicePartitionMetadata(
-            "partition2",
-            1000,
             Instant.now().toEpochMilli(),
-            Instant.now().plusSeconds(90).toEpochMilli());
+            Instant.now().plusSeconds(90).toEpochMilli(),
+            List.of("partition2"));
 
     assertThatExceptionOfType(UnsupportedOperationException.class)
-        .isThrownBy(() -> serviceMetadata.partitionList.add(partition2));
+        .isThrownBy(() -> serviceMetadata.partitionConfigs.add(partition2));
   }
 
   @Test
   public void testEqualsAndHashCode() {
     final String name = "testService";
+    final String owner = "serviceOwner";
+    final long throughputBytes = 1000;
     final ServicePartitionMetadata partition =
         new ServicePartitionMetadata(
-            "partition",
-            1000,
             Instant.now().toEpochMilli(),
-            Instant.now().plusSeconds(90).toEpochMilli());
-    final List<ServicePartitionMetadata> partitionList = Collections.singletonList(partition);
+            Instant.now().plusSeconds(90).toEpochMilli(),
+            List.of("partition"));
+    final List<ServicePartitionMetadata> partitionConfig = Collections.singletonList(partition);
 
-    ServiceMetadata serviceMetadata1 = new ServiceMetadata(name, partitionList);
-    ServiceMetadata serviceMetadata2 = new ServiceMetadata(name + "2", partitionList);
-    ServiceMetadata serviceMetadata3 = new ServiceMetadata(name, Collections.emptyList());
+    ServiceMetadata serviceMetadata1 =
+        new ServiceMetadata(name, owner, throughputBytes, partitionConfig);
+    ServiceMetadata serviceMetadata2 =
+        new ServiceMetadata(name + "2", owner, throughputBytes, partitionConfig);
+    ServiceMetadata serviceMetadata3 =
+        new ServiceMetadata(name, owner + "3", throughputBytes, partitionConfig);
+    ServiceMetadata serviceMetadata4 =
+        new ServiceMetadata(name, owner, throughputBytes + 4, partitionConfig);
+    ServiceMetadata serviceMetadata5 =
+        new ServiceMetadata(name, owner, throughputBytes, Collections.emptyList());
 
     assertThat(serviceMetadata1).isEqualTo(serviceMetadata1);
     assertThat(serviceMetadata1).isNotEqualTo(serviceMetadata2);
     assertThat(serviceMetadata1).isNotEqualTo(serviceMetadata3);
+    assertThat(serviceMetadata1).isNotEqualTo(serviceMetadata4);
+    assertThat(serviceMetadata1).isNotEqualTo(serviceMetadata5);
 
     Set<ServiceMetadata> set = new HashSet<>();
     set.add(serviceMetadata1);
     set.add(serviceMetadata2);
     set.add(serviceMetadata3);
-    assertThat(set.size()).isEqualTo(3);
-    assertThat(set).containsOnly(serviceMetadata1, serviceMetadata2, serviceMetadata3);
+    set.add(serviceMetadata4);
+    set.add(serviceMetadata5);
+    assertThat(set.size()).isEqualTo(5);
+    assertThat(set)
+        .containsOnly(
+            serviceMetadata1,
+            serviceMetadata2,
+            serviceMetadata3,
+            serviceMetadata4,
+            serviceMetadata5);
   }
 
   @Test
   public void testValidServiceMetadata() {
     final String name = "testService";
+    final String owner = "serviceOwner";
+    final long throughputBytes = 1000;
     final ServicePartitionMetadata partition =
         new ServicePartitionMetadata(
-            "partition",
-            1000,
             Instant.now().toEpochMilli(),
-            Instant.now().plusSeconds(90).toEpochMilli());
-    final List<ServicePartitionMetadata> partitionList = Collections.singletonList(partition);
+            Instant.now().plusSeconds(90).toEpochMilli(),
+            List.of("partition"));
+    final List<ServicePartitionMetadata> partitionConfig = Collections.singletonList(partition);
 
-    assertThatIllegalArgumentException().isThrownBy(() -> new ServiceMetadata("", partitionList));
-    assertThatIllegalArgumentException().isThrownBy(() -> new ServiceMetadata(null, partitionList));
-    assertThatIllegalArgumentException().isThrownBy(() -> new ServiceMetadata(name, null));
+    assertThatIllegalArgumentException()
+        .isThrownBy(() -> new ServiceMetadata("", owner, throughputBytes, partitionConfig));
+    assertThatIllegalArgumentException()
+        .isThrownBy(() -> new ServiceMetadata(null, owner, throughputBytes, partitionConfig));
+    assertThatIllegalArgumentException()
+        .isThrownBy(() -> new ServiceMetadata(name, "", throughputBytes, partitionConfig));
+    assertThatIllegalArgumentException()
+        .isThrownBy(() -> new ServiceMetadata(name, null, throughputBytes, partitionConfig));
+    assertThatIllegalArgumentException()
+        .isThrownBy(() -> new ServiceMetadata(name, owner, 0, partitionConfig));
+    assertThatIllegalArgumentException()
+        .isThrownBy(() -> new ServiceMetadata(name, owner, throughputBytes, null));
   }
 
   @Test
   public void testValidServicePartitions() {
     final String name = "testService";
+    final String owner = "serviceOwner";
     final String partitionName = "partition";
+    final List<String> partitionlist = List.of(partitionName);
     final long throughputBytes = 2000;
 
     assertThatIllegalArgumentException()
@@ -109,35 +146,43 @@ public class ServiceMetadataTest {
             () ->
                 new ServiceMetadata(
                     name,
+                    owner,
+                    throughputBytes,
                     List.of(
-                        new ServicePartitionMetadata(partitionName, throughputBytes, 0, 2000),
-                        new ServicePartitionMetadata(partitionName, throughputBytes, 0, 3000))));
+                        new ServicePartitionMetadata(0, 2000, partitionlist),
+                        new ServicePartitionMetadata(0, 3000, partitionlist))));
 
     assertThatIllegalArgumentException()
         .isThrownBy(
             () ->
                 new ServiceMetadata(
                     name,
+                    owner,
+                    throughputBytes,
                     List.of(
-                        new ServicePartitionMetadata(partitionName, throughputBytes, 0, 2000),
-                        new ServicePartitionMetadata(partitionName, throughputBytes, 2000, 3000))));
+                        new ServicePartitionMetadata(0, 2000, partitionlist),
+                        new ServicePartitionMetadata(2000, 3000, partitionlist))));
 
     assertThatIllegalArgumentException()
         .isThrownBy(
             () ->
                 new ServiceMetadata(
                     name,
+                    owner,
+                    throughputBytes,
                     List.of(
-                        new ServicePartitionMetadata(partitionName, throughputBytes, 0, 3000),
-                        new ServicePartitionMetadata(partitionName, throughputBytes, 0, 2000))));
+                        new ServicePartitionMetadata(0, 3000, partitionlist),
+                        new ServicePartitionMetadata(0, 2000, partitionlist))));
 
     assertThatIllegalArgumentException()
         .isThrownBy(
             () ->
                 new ServiceMetadata(
                     name,
+                    owner,
+                    throughputBytes,
                     List.of(
-                        new ServicePartitionMetadata(partitionName, throughputBytes, 0, 2000),
-                        new ServicePartitionMetadata(partitionName, throughputBytes, 1800, 3000))));
+                        new ServicePartitionMetadata(0, 2000, partitionlist),
+                        new ServicePartitionMetadata(1800, 3000, partitionlist))));
   }
 }
